Fix minor layout problems, increase contrast ratio

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@
 
 @media (min-width: 320px) and (min-height: 568px) {
   .footer {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    padding: 1rem;
   }
 }
 
@@ -24,7 +25,7 @@
 
 .footer .footer__link {
   color: #f15bb5;
-  text-shadow: 1px 1px #003459;
+  text-shadow: 1px 1px #1f1f1f;
   text-decoration: none;
 }
 
@@ -73,10 +74,17 @@
   text-align: center;
   font-style: italic;
   font-weight: 800;
-  font-size: 3.5rem;
+  font-size: 5.5rem;
   color: #f15bb5;
-  background: #003459;
+  background: #1f1f1f;
   text-shadow: 3px 3px #00bbf9, 6px 6px #00f5d4, 9px 9px #fee440, 12px 12px #9b5de5;
+}
+
+@media (min-width: 200px) and (max-width: 500px) {
+  .header .header__title {
+    font-size: 3rem;
+    padding-top: 1rem;
+  }
 }
 
 * {
@@ -89,7 +97,7 @@
   text-align: center;
   font-weight: 400;
   color: #f1f1f1;
-  background: #003459;
+  background: #1f1f1f;
   z-index: 1;
 }
 
@@ -158,30 +166,9 @@
   color: #f1f1f1;
 }
 
-@media (min-width: 320px) and (min-height: 568px) {
-  .header__title {
-    font-size: 3rem;
-    padding: 20px 0 10px;
-  }
-}
-
-@media (min-width: 375px) and (min-height: 667px) {
-  .header__title {
-    font-size: 3.8rem;
-    padding: 50px 0 10px;
-  }
-}
-
-@media (min-width: 375px) and (min-height: 812px) {
-  .header__title {
-    font-size: 3.8rem;
-    padding: 120px 0 10px;
-  }
-}
-
 @media only screen and (min-width: 500px) {
   .card {
-    margin: 80px auto;
+    margin: 0px auto;
   }
   .card .card__color-swatch {
     height: 300px;
@@ -219,8 +206,7 @@
 }
 
 .app {
-  background-color: #003459;
+  background-color: #1f1f1f;
   height: 100vh;
   width: 100vw;
 }
-/*# sourceMappingURL=index.css.map */
